--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "salt": "^0.5.5"
   }
 }
