--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
     "nodemon": "^2.0.16",
-    "salt": "^0.5.5"
+    "salt": "^0.5.5",
+    "validator": "^13.7.0"
   }
 }
